<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/discussionFragment"
        android:icon="@drawable/ic_discussion"
        android:title="@string/nav_discussion" />

    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_quiz"
        android:title="Kuis" />

    <item
        android:id="@+id/learningResourcesFragment"
        android:icon="@drawable/ic_resources"
        android:title="@string/nav_resources" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
