<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/archiveFragment">

    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.lumora.app.fragments.ArchiveFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_archive" />



    <fragment
        android:id="@+id/quizFragment"
        android:name="com.lumora.app.fragments.QuizFragment"
        android:label="Kuis"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/learningResourcesFragment"
        android:name="com.lumora.app.fragments.LearningResourcesFragment"
        android:label="@string/nav_resources"
        tools:layout="@layout/fragment_learning_resources" />

    <fragment
        android:id="@+id/bookmarkFragment"
        android:name="com.lumora.app.fragments.BookmarkFragment"
        android:label="@string/nav_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.lumora.app.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/learningPathFragment"
        android:name="com.lumora.app.fragments.LearningPathFragment"
        android:label="@string/nav_learning_path"
        tools:layout="@layout/fragment_learning_path" />

    <fragment
        android:id="@+id/tutorialFragment"
        android:name="com.lumora.app.fragments.TutorialFragment"
        android:label="@string/nav_tutorial"
        tools:layout="@layout/fragment_tutorial" />



    <activity
        android:id="@+id/achievementGalleryActivity"
        android:name="com.lumora.app.activities.AchievementGalleryActivity"
        android:label="Galeri Penghargaan" />

    <activity
        android:id="@+id/offlineLibraryActivity"
        android:name="com.lumora.app.activities.OfflineLibraryActivity"
        android:label="Perpustakaan Offline" />

</navigation>
